--- a/config.json
+++ b/config.json
@@ -1,14 +1,13 @@
 {
-    "token": "TOKENİNİZİ GİRİN",
-	"log":"LOG KANALI IDSİ GİRİN",
-    "sahip":"SAHİP ID GİRİN",
-    "giris-cikis":"BOTUN EKLENİP ÇIKARILDIĞI KANALLARIN LOGUNU TUTACAPI KANAL ID",
-    "desteksunucusu":"https://discord.gg/dvCKjxHn35",
-    "bot-davet":"https://discord.com/oauth2/authorize?client_id=1229312139517235281&permissions=8&scope=bot+applications.commands",
-    "bot-adi":"Rimuru",
-    "bot-id":"BOTUN IDSİ",
-    "website":"https://oktaydev.com.tr",
-    "durum":"HENTAİ",
+    "log":"1365734421625569320",
+    "sahip":"1341874172896219227",
+    "giris-cikis":"1365733941449068615",
+    "desteksunucusu":"https://discord.gg/ArfXapGS4u",
+    "bot-davet":https://discord.com/oauth2/authorize?client_id=1361057541324537867&permissions=8&integration_type=0&scope=bot",
+    "bot-adi":"CuzCat+",
+    "bot-id":"1361057541324537867",
+    "website":"Yakında",
+    "durum":"Cuzcat+💞",
     "prefix":"!",
     "mesajXp": 1,
     "sesXp":2,
